Fix for the covers of non-Steam games and add updates checker.

--- a/sources/css/gadget.css
+++ b/sources/css/gadget.css
@@ -50,3 +50,7 @@ a:hover {
   padding           : 0;
   float             : left;
 }
+
+.nocover {
+  background-color  : #fff;
+}
