--- a/sources/css/settings.css
+++ b/sources/css/settings.css
@@ -4,8 +4,8 @@
 }
 
 body {
-  width             : 100px;
-  height            : 200px;
+  width             : 200px;
+  height            : 150px;
   margin            : 2px 0;
 }
 
